# natal-core

./: .gitignore  .readthedocs-zh.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  OPTIMIZATION_REPORT.md  README.md  TODO.md  count_errors.py  demo_app.py  docstring_spec.md  docstring_spec_cn.md  example_google.py  fix_cache.py  mkdocs.en.yml  mkdocs.yml  mkdocs.zh.yml  mod.py  pyproject.toml  pyright_report.txt  pyright_src_report.txt  pyright_src_report_after_batch2.txt  pyright_src_report_after_batch3.txt  pyright_src_report_after_decoratorfix.txt  pyright_src_report_after_privatefix.txt  pyright_src_report_after_unusedfix.txt  pyright_src_report_after_unusedfix2.txt  quality_checks_spec.md  quality_checks_spec_cn.md  ruff_res.txt  t.py  test_corrected_sampling.py  test_improved_sampling.py  test_jitclass_capture.py  test_jitclass_global.py  test_position_recombination.py  test_position_recombination_new.py  test_sampling_consistency.py  (+1 more)
.github/: copilot-instructions.md
benchmarks/: README.md  benchmark_discrete_kernels.py  benchmark_kernel_overhead.py  benchmark_stages.py  profile_numba_step_breakdown.py  profile_random_modes.py  profile_repro_direct.py  profile_single_deme_repro.py  profile_spatial_hex_run.py
demos/: discrete.py  discrete_ui.py  drive_ridl_remake.py  drive_ridl_remake_batch.py  drive_ridl_remake_ui.py  mosquito.py  mosquito_ui.py  observation_history_demo.py  spatial.py  spatial_hex.py  spatial_hex_discrete.py  spatial_hex_ui.py  spatial_ui.py
docs/: 01_quickstart.md  02_genetic_structures.md  03_builder_system.md  03_simulation_kernels.md  04_index_registry.md  04_population_state_config.md  05_index_core.md  05_population_state_config.md  06_modifiers.md  06_simulation_kernels.md  07_hooks.md  07_hooks_dsl.md  07_numba_optimization.md  08_modifiers.md  08_numba_optimization.md  09_api_reference.md  09_hooks.md  10_genetic_presets.md  10_samplers_observation.md  11_allele_conversion_rules.md  11_spatial_simulation_guide.md  12_genotype_filter_implementation.md  12_samplers_observation.md  13_allele_conversion_rules.md  13_filtering_api_reference.md  14_genotype_filter_implementation.md  14_genotype_pattern_matching_design.md  15_filtering_api_reference.md  15_genetic_presets_guide.md  16_genotype_pattern_matching_design.md  16_spatial_simulation_guide.md  README.md  allele_conversion_rules.md  builder_system.md  filtering_api_reference.md  genetic_presets.md  genetic_structures.md  genotype_filter.md  genotype_filter_implementation.md  genotype_pattern_matching_design.md  (+14 more)
docs/api/: age_structured_population.md  algorithms.md  base_population.md  discrete_generation_population.md  genetic_entities.md  genetic_patterns.md  genetic_presets.md  genetic_structures.md  hook_dsl.md  index.md  modifiers.md  population_builder.md  population_config.md  population_state.md  simulation_kernels.md  state_translation.md
docs/en/: 1_quickstart.md  2_data_output.md  2_genetic_presets.md  2_genetics.md  2_genotype_patterns.md  2_hooks.md  2_population.md  2_population_initialization.md  3_advanced_hooks.md  3_custom_presets.md  3_modifiers.md  3_spatial_simulation.md  4_index_registry.md  4_numba_optimization.md  4_population_state_config.md  4_simulation_engine.md  4_simulation_kernels.md  allele_conversion_rules.md  builder_system.md  caching_and_codegen.md  genetic_presets.md  genetic_structures.md  index.md  (+16 more)
scripts/: check_docstring_fields.py  cleanup_docs.py  docstring_standardizer.py  final_docstring_cleanup.py  generate_api_docs.py  generate_enhanced_api_docs.py  generate_init_pyi.py  normalize_docstrings.py
tests/: conftest.py  test_age_structured_population.py  test_algorithms_coverage.py  test_algorithms_sex_assignment.py  test_algorithms_sperm_storage_tolerance.py  test_bracket_patterns.py  test_corrected_sampling.py  test_discrete_builder_initial_state.py  test_discrete_generation_sex_chromosome_mendelian.py  test_discrete_population.py  test_genetic_entities.py  test_genetic_patterns.py  test_genetic_structures.py  test_genotype_patterns_documentation.py  test_helpers.py  test_hook_condition_interpreter.py  test_hook_deme_selector.py  test_hook_deme_selector_policy.py  test_hook_executor_rounding.py  test_hook_kernel_ops.py  test_hook_numba_strict_mode.py  test_hook_priority_mixed.py  test_hook_selector_mode.py  test_improved_sampling.py  test_index_registry.py  test_numba_utils_cache_dir.py  test_package_exports.py  test_packaging.py  test_pattern_comprehensive.py  test_pattern_matching.py  test_pattern_omission_syntax.py  test_population_builder_carrying_capacity.py  test_population_builder_fitness_patterns.py  test_population_builder_initial_injection.py  test_random_sampling_consistency.py  test_recipe_fitness_patch.py  test_recipe_species_binding.py  test_sampling_consistency.py  test_spatial_builder_coverage.py  test_spatial_codegen_wrappers.py  (+12 more)
(+142 files in other folders)
