[project]
name = "natal-core"
version = "0.1.0"
description = "Numba-Accelerated Toolkit for Analysis of Lifecycle-based population genetic dynamics"
readme = "README.md"
authors = [
    { name = "Jinyu Zhu", email = "jyzhu_2020@stu.pku.edu.cn" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["population-genetics", "simulation", "numba", "bioinformatics", "evolutionary-biology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "nicegui[highcharts]>=3.0.0",
    "numba>=0.60.0",
    "numpy>=2.0.0",
    "pandas>=2.1.0",
    "plotly>=6.0.0",
    "scipy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/jyzhu-pointless/natal-core"
Documentation = "https://github.com/jyzhu-pointless/natal-core/tree/main/docs"
Repository = "https://github.com/jyzhu-pointless/natal-core"
Issues = "https://github.com/jyzhu-pointless/natal-core/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "src/natal/kernels/templates/*.tmpl",
]

[tool.hatch.build.targets.wheel]
packages = ["src/natal"]