[project]
name = "natal-core"
version = "0.0.0-beta"
description = "Numba-Accelerated Toolkit for Analysis of Lifecycle-based population genetic dynamics"
readme = "README.md"
authors = [
    { name = "Jinyu Zhu", email = "jyzhu_2020@stu.pku.edu.cn" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["population-genetics", "simulation", "numba", "bioinformatics", "evolutionary-biology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "matplotlib>=3.0.0",
    "nicegui[highcharts]>=3.0.0",
    "numba>=0.60.0",
    "numpy>=2.0.0",
    "pandas>=2.1.0",
    "plotly>=6.0.0",
    "scipy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/jyzhu-pointless/natal-core"
Documentation = "https://natal-core.readthedocs.io/en/latest/"
Repository = "https://github.com/jyzhu-pointless/natal-core"
Issues = "https://github.com/jyzhu-pointless/natal-core/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-v"]

[project.optional-dependencies]
test = ["pytest>=7.0.0"]

[tool.ruff]
target-version = "py39"
line-length = 88
include = ["src/**/*.py", "demos/**/*.py"]
exclude = ["tests/**", "**/__pycache__", "**/*.pyc", "visualization.py", "dashboard.py", "src/natal/hook_dsl.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "UP006", # non-pep585-annotation
    "UP007",
    "UP035",
    "UP045"
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # ignore asserts in tests
"src/natal/hook_dsl.py" = ["E", "W", "F", "I", "B", "C4", "UP"]  # compatibility shim: star re-export by design

[tool.pyright]
include = ["src"]
ignore = ["tests/**", "**/__pycache__", "**/*.pyc"]

typeCheckingMode = "strict"

[tool.hatch.build]
include = [
    "src/natal/kernels/templates/*.tmpl",
]

[tool.hatch.build.targets.wheel]
packages = ["src/natal"]
